# Market-Data-Simulator

./: .gitignore  CMakeLists.txt  Readme.md
src/: MarketData.cpp  MarketData.h  RandomGenerator.cpp  RandomGenerator.h  TimestampGenerator.cpp  TimestampGenerator.h  main.cpp
